# master-thesis

./: .gitignore  METRICS.md  PLAN.md  README.md  SUMMARY.md  pyproject.toml  requirements.txt
configs/: env.yaml  experiment_matrix.yaml  ppo_centralized.yaml  ppo_common.yaml  ppo_independent.yaml  ppo_mappo.yaml  ppo_shared.yaml
handoff/: PRISM_README.md  README.md
handoff/configs/: ppo_independent.yaml  ppo_mappo.yaml
handoff/results/compare/: comparison_test_all.csv  comparison_test_all.html
handoff/results/tables/: evaluation_across_seeds.csv  evaluation_per_seed.csv
handoff/routes/manifests/: routes_manifest.json
handoff/scripts/: aggregate_results.py  compare_results.py  generate_routes.py
handoff/src/traffic_rl/: algo_mappo.py  controllers.py  envs.py  evaluation.py  metrics.py  train_common.py
nets/2x2/: 2x2.net.xml  2x2_peds.net.xml  tls_ids.json
nets/2x2/plain/: 2x2.con.xml  2x2.edg.xml  (+2 more)
routes/manifests/: routes_manifest.json  routes_manifest_peds.json  test_manifest.json
scripts/: aggregate_results.py  build_2x2_network.py  compare_results.py  compute_webster_baseline.py  eval_policy.py  generate_routes.py  run_all.sh  run_baseline.py  train_centralized_ppo.py  train_independent_ppo.py  train_mappo.py  train_shared_ppo.py
src/traffic_rl/: __init__.py  algo_centralized.py  algo_independent.py  algo_mappo.py  algo_shared.py  comparison.py  config.py  envs.py  evaluation.py  metrics.py  models.py  pedestrians.py  reporting.py  routes.py  runtime.py  scenario.py  train_common.py  utils.py
tests/: test_config.py  test_pipeline.py
(+180 files in other folders)
